--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand"
-            href= "/home">Home</a>
+        <a class="navbar-brand" href="/home">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,13 +22,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page"
-                        href= "/sign-up" >Sign
+                    <a class="nav-link active" aria-current="page" href="/sign-up">Sign
                         Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"
-                        href= "/log-in">Log
+                    <a class="nav-link" href="/log-in">Log
                         In</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -38,11 +35,10 @@
                         How To Get help
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item"
-                                href= "/gethelp">Get
+                        <li><a class="dropdown-item" href="/gethelp">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item" href= "/talk">Talk With A Professional</a></li>
-                        <li><a class="dropdown-item" href= "/chatroom">Chat Room</a></li>
+                        <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
+                        <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
                     </ul>
                 </li>
             </ul>
@@ -67,29 +63,25 @@
         </div>
         <div id="BasicInfo">
             <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-            <p>Mental health is a challenge for many people especially teenagers in middle and high school. With the
-                Covid pandemic
-                this issue has been exacerbated and yet there are very few website specifically oriented towards
-                students. This is why
-                we have made a website for students to share their experiences and use resources to help better their
-                mental health.</p>
+            <p>Our mission is to create a way for students to easily be able to share their mental health experiences.</p>
         </div>
 
-        <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
-            alt="mental health photos" id="Picture" />
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
         <div class="card-group" id="Cards">
             <div class="card" id=InfoPage>
+                <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
+                    alt="mental health photos" id="Picture" />
                 <div class="card-body">
                     <h5 class="card-title">Information Page</h5>
                     <p class="card-text">Click here to learn more about us.</p>
-                    <a href= "/info"
-                        class="btn btn-primary">Info</a>
+                    <a href="/info" class="btn btn-primary">Info</a>
                 </div>
             </div>
         </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
     </body>
 
 </html>
