--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,7 +17,9 @@ div {
 #BasicInfo {
 	color: #52B788;
     font-family: "Cabin" , sans-serif;
-    font-size: x-large 
+    font-size: x-large;
+    /* margin-left: 50px;
+    margin-right: 50px;  */
 }
 
 #SubText {
@@ -34,8 +36,10 @@ div {
     }
 
 #Picture{
+    max-width: 35%;
+    max-height: 350px;
     border-radius: 30%;
-    margin-left: 27%;
+    margin-left: 440px;
     text-align: center;    
 }
 
