--- a/templates/signed-in.html
+++ b/templates/signed-in.html
@@ -62,7 +62,7 @@
 
     <body>
         <div id="MainText">
-            <h1>Mental Health</h1>
+            <h1>EduMental</h1>
             <p id="SubText">"For Students By Students"</p>
 
             <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/Logo.png"
@@ -71,29 +71,25 @@
         </div>
         <div id="BasicInfo">
             <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-            <p>Mental health is a challenge for many people especially teenagers in middle and high school. With the
-                Covid pandemic
-                this issue has been exacerbated and yet there are very few website specifically oriented towards
-                students. This is why
-                we have made a website for students to share their experiences and use resources to help better their
-                mental health.</p>
+            <p>Our mission is to create a way for students to easily be able to share their mental health experiences.</p>
         </div>
-        </div>
-        <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
-            alt="mental health photos" id="Picture" />
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+
         <div class="card-group" id="Cards">
             <div class="card" id=InfoPage>
+                <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
+                    alt="mental health photos" id="Picture" />
                 <div class="card-body">
                     <h5 class="card-title">Information Page</h5>
                     <p class="card-text">Click here to learn more about us.</p>
-                    <a href= "/info"
-                        class="btn btn-primary">Info</a>
+                    <a href="/info" class="btn btn-primary">Info</a>
                 </div>
             </div>
         </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
     </body>
 
 </html>
