--- a/templates/chat-ad.html
+++ b/templates/chat-ad.html
@@ -15,8 +15,7 @@
 <body style="background-color: #52B788"></body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand"
-            href= "/home">Home</a>
+        <a class="navbar-brand" href="/home">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,13 +23,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page"
-                        href= "/sign-up">Sign
+                    <a class="nav-link active" aria-current="page" href="/sign-up">Sign
                         Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"
-                        href= "/log-in">Log
+                    <a class="nav-link" href="/log-in">Log
                         In</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -39,11 +36,10 @@
                         How To Get help
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item"
-                                href= "/gethelp">Get
+                        <li><a class="dropdown-item" href="/gethelp">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item" href= "/talk">Talk With A Professional</a></li>
-                        <li><a class="dropdown-item" href=  "/chatroom">Chat Room</a></li>
+                        <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
+                        <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
                     </ul>
                 </li>
             </ul>
@@ -53,6 +49,7 @@
         </div>
     </div>
 </nav>
+
 <h1 id="ADHDTitle">ADHD Chat</h1>
 <div id="chat">
     <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/chat.png"
