--- a/templates/info.html
+++ b/templates/info.html
@@ -123,7 +123,8 @@
                     <div class="card-body">
                         <p id="FounderText">Hi, I'm Archishman, one of the coders who made this website.
                             I wanted to make this because I thought a chatroom for teens with 
-                            mental health issues is an unfilled niche. Contact me at archishmant@gmail.com.
+                            mental health issues would be a solution to many problems that I face. 
+                            Contact me at archishmant@gmail.com.
                         </p>
                     </div>
                 </div>
