--- a/templates/home.html
+++ b/templates/home.html
@@ -68,8 +68,10 @@
 
         <div class="card-group" id="Cards">
             <div class="card" id=InfoPage>
+                <div class="pic" id="Picture">
                 <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
-                    alt="mental health photos" id="Picture" />
+                    alt="mental health photos" id= "Picture" hieght="600px"width= "600px"/>
+                </div>
                 <div class="card-body">
                     <h5 class="card-title">Information Page</h5>
                     <p class="card-text">Click here to learn more about us.</p>
