--- a/templates/info.html
+++ b/templates/info.html
@@ -57,15 +57,14 @@
     <body>
         <div id="MainText">
             <h1>Information Page</h1>
-            <p id="SubText">This website is for spreading awareness on Mental Heath and helping students who have issues
-                to get help.</p>
+            <p id="SubText">"For Students By Students"</p>
             <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/Logo.png"
                 alt="Logo" height="100" width="100" id="Logo" />
         </div>
         <div id="BasicInfo">
             <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
             <h2>The Problem</h2>
-            <p id="Text">
+            <p id="Text1">
                 Many people today tend to ignore the present mental health issues among
                 students in New York City. In 2019, when the COVID-19 pandemic started,
                 depression among teens from the ages of 15-19 spiked by an overwhelming
@@ -97,32 +96,32 @@
             <h2>Who Are We?</h2>
             <div class="card-group" id="Cards">
                 <div class="card">
-                    <img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/hl-newsletter-new/img/adhd.png?w=1155"
-                        class="card-img-top" alt="EmilyS" id="FounderPicture">
+                    <img src="https://970-64a597a0-9624-4f91-9e13-066b8017a46f.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/archishmant/mentalhealthwebsite/FlaskProject2021/static/images/Image%20from%20iOS.jpg"
+                        class="card-img-top" alt="EmilyS" id="EmilyPicture">
                     <div class="card-body">
-                        <p id="FounderText">Chat With People Who Also Have ADHD</p>
+                        <p id="FounderText">Hello! My name is Emily Singh and my motivation behind helping to start this company is how the pandemic has impacted the mental health of both my friends and myself. Contact me at s.emily00656@gmail.com.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="https://www.cedars-sinai.org/content/dam/cedars-sinai/blog/2019/07/common-physical-symptoms-of-hidden-stress.jpg"
-                        class="card-img-top" alt="MatthewV" id="FounderPicture">
+                        class="card-img-top" alt="MatthewV" id="MatthewPicture">
                     <div class="card-body">
                         <p id="FounderText">Chat With People Who Also Have Stress</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/hl-newsletter-new/img/adhd.png?w=1155"
-                        class="card-img-top" alt="KevinG" id="FounderPicture">
+                        class="card-img-top" alt="KevinG" id="KevinPicture">
                     <div class="card-body">
                         <p id="FounderText">Chat With People Who Also Have ADHD</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="https://970-64a597a0-9624-4f91-9e13-066b8017a46f.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/archishmant/mentalhealthwebsite/FlaskProject2021/static/images/5E49C1A9-8C0B-4499-ADFC-9A4BA881D969.jpeg"
-                        class="card-img-top" alt="ArchishmanN" id="FounderPicture">
+                        class="card-img-top" alt="ArchishmanN" id="ArchishmanPicture">
                     <div class="card-body">
                         <p id="FounderText">Hi, I'm Archishman, one of the coders who made this website.
-                            I wanted to make this because I thought a chatroom for teens with 
+                            I wanted to help make this because I thought a chatroom for teens with 
                             mental health issues would be a solution to many problems that I face. 
                             Contact me at archishmant@gmail.com.
                         </p>
