--- a/templates/home.html
+++ b/templates/home.html
@@ -63,7 +63,13 @@
         </div>
         <div id="BasicInfo">
             <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-            <p>Our mission is to create a way for students to easily be able to share their mental health experiences.</p>
+            <p>Many people today tend to ignore the present mental health issues among
+                students in New York City. In 2019, when the COVID-19 pandemic started,
+                depression among teens from the ages of 15-19 spiked by an overwhelming
+                35.9%. Over the past year with online school and Zoom classes, one can
+                only imagine how much this percentage has increased. Our mission is to 
+                create a way for students to easily be able to share their mental health 
+                experiences.</p>
         </div>
 
         <div class="card-group" id="Cards">
