--- a/templates/info.html
+++ b/templates/info.html
@@ -65,11 +65,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
             <h2>The Problem</h2>
             <p id="Text1">
-                Many people today tend to ignore the present mental health issues among
-                students in New York City. In 2019, when the COVID-19 pandemic started,
-                depression among teens from the ages of 15-19 spiked by an overwhelming
-                35.9%. Over the past year with online school and Zoom classes, one can
-                only imagine how much this percentage has increased. Depression in teens
+                Depression in teens
                 has also been proven to be a crucial factor in a student's academic
                 performance and concentration. Additionally, in New York there are six
                 deaths per every 100,000 people in the same age group of 15-19 caused by
