--- a/templates/home.html
+++ b/templates/home.html
@@ -39,8 +39,12 @@
                                 Help</a></li>
                         <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
                         <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
+                         <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/info">About Us</a>
                     </ul>
+                    
                 </li>
+                <li class= "nav-item dropdown"> <a class="nav-link active" aria-current="page" href="/info">About Us</a></li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -66,17 +70,12 @@
             <p>Our mission is to create a way for students to easily be able to share their mental health experiences.</p>
         </div>
 
-        <div class="card-group" id="Cards">
-            <div class="card" id=InfoPage>
-                <div class="pic" id="Picture">
-                <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
+      
+           <div class="pic" id="Picture">
+             <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
                     alt="mental health photos" id= "Picture" hieght="600px"width= "600px"/>
                 </div>
-                <div class="card-body">
-                    <h5 class="card-title">Information Page</h5>
-                    <p class="card-text">Click here to learn more about us.</p>
-                    <a href="/info" class="btn btn-primary">Info</a>
-                </div>
+
             </div>
         </div>
 
