--- a/templates/chat-ad.html
+++ b/templates/chat-ad.html
@@ -41,6 +41,7 @@
                         <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
                         <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
                     </ul>
+                     <li class= "nav-item dropdown"> <a class="nav-link active" aria-current="page" href="/info">About Us</a></li>
                 </li>
             </ul>
             <form class="d-flex">
