--- a/templates/chat-bi-signedin.html
+++ b/templates/chat-bi-signedin.html
@@ -46,6 +46,7 @@
                         <li><a class="dropdown-item" href= "/chatroom-signedin">Chat Room</a></li>
                     </ul>
                 </li>
+                 <li class= "nav-item dropdown"> <a class="nav-link active" aria-current="page" href="/info">About Us</a></li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
