--- a/templates/gethelp.html
+++ b/templates/gethelp.html
@@ -13,8 +13,7 @@
 <body style="background-color: #52B788"></body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand"
-            href= "/home">Home</a>
+        <a class="navbar-brand" href="/home">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,28 +21,29 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page"
-                        href= "/sign-up">Sign
+                    <a class="nav-link active" aria-current="page" href="/sign-up">Sign
                         Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link"
-                        href= "/log-in">Log
+                    <a class="nav-link" href="/log-in">Log
                         In</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         How To Get help
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item"
-                                href= "/gethelp">Get
+                        <li><a class="dropdown-item" href="/gethelp">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item" href= "/talk">Talk With A Professional</a></li>
-                        <li><a class="dropdown-item" href= "/chatroom">Chat Room</a></li>
+                        <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
+                        <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
+                         <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/info">About Us</a>
                     </ul>
+                    
                 </li>
+                <li class= "nav-item dropdown"> <a class="nav-link active" aria-current="page" href="/info">About Us</a></li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
