--- a/templates/info.html
+++ b/templates/info.html
@@ -30,19 +30,21 @@
                         In</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         How To Get help
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/gethelp">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item" href="/talk">Talk
-                                With A Professional</a></li>
-                        <li><a class="dropdown-item" href="/chatroom">Chat
-                                Room</a></li>
+                        <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
+                        <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
+                         <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/info">About Us</a>
                     </ul>
+                    
                 </li>
+                <li class= "nav-item dropdown"> <a class="nav-link active" aria-current="page" href="/info">About Us</a></li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -90,6 +92,7 @@
                 specific problem.
             </p>
             <h2>Who Are We?</h2>
+            <p id=SubText>Contact all of us at EduMental1@gmail.com.</p>
             <div class="card-group" id="Cards">
                 <div class="card">
                     <img src="https://970-64a597a0-9624-4f91-9e13-066b8017a46f.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/archishmant/mentalhealthwebsite/FlaskProject2021/static/images/Image%20from%20iOS.jpg"
