--- a/templates/chat-ad.html
+++ b/templates/chat-ad.html
@@ -40,12 +40,17 @@
                                 Help</a></li>
                         <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
                         <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
+                         <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/info">About Us</a>
                     </ul>
+                    
                 </li>
+                <li class= "nav-item dropdown"> <a class="nav-link active" aria-current="page" href="/info">About Us</a></li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
         </div>
     </div>
 </nav>
