--- a/templates/home.html
+++ b/templates/home.html
@@ -76,9 +76,12 @@
                 experiences.</p>
         </div>
 
+        <div class="pic" id="Picture">
+             <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
+                    alt="mental health photos" id= "Picture" hieght="600px"width= "600px"/>
+                </div>
 
-
-        </div>
+            </div>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
