--- a/templates/home.html
+++ b/templates/home.html
@@ -61,7 +61,7 @@
             <h1>EduMental</h1>
             <p id="SubText">"For Students By Students"</p>
 
-            <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/Logo.png"
+            <img src="static/images/Logo.png"
                 alt="Logo" height="100" width="100" id="Logo" />
 
         </div>
