--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -40,7 +40,7 @@
                         <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
                         <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
                          <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/info">About Us</a>
+                  
                     </ul>
                     
                 </li>
@@ -57,7 +57,7 @@
 
 <div class="card-group" id="Cards">
   <div class="card">
-    <img src="https://uniquemindcare.com/wp-content/uploads/2020/01/cbd-and-anxiety.png" class="card-img-top" alt="AnxPhoto" id="Anxiety">
+    <img src="/static/images/anxiety.png" class="card-img-top" alt="AnxPhoto" id="Anxiety">
     <div class="card-body">
       <h5 class="card-title">Anxiety</h5>
       <p class="card-text">Chat With Other People Who Also Have Anxiety</p>
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://images.emedicinehealth.com/images/article/main_image/bipolar-disorder-1.jpg" class="card-img-top" alt="BiPhoto" id="Bipolar">
+    <img src="/static/images/bipolar-disorder.jpeg" class="card-img-top" alt="BiPhoto" id="Bipolar">
     <div class="card-body">
       <h5 class="card-title">Bipolar Disorder</h5>
       <p class="card-text">Chat With Other People Who Also Have Bipolar Disorder</p>
@@ -73,7 +73,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://www.talkspace.com/blog/wp-content/uploads/2017/09/stigma-depression-woman-illustration_1320WJR-1.png" class="card-img-top" alt="DepPhoto" id="Depression">
+    <img src= "/static/images/stigma-depression.png" class="card-img-top" alt="DepPhoto" id="Depression">
     <div class="card-body">
       <h5 class="card-title">Depression</h5>
       <p class="card-text">Chat With Other People Who Also Have Depression</p>
@@ -84,7 +84,7 @@
 
 <div class="card-group" id="Cards">
   <div class="card">
-    <img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/hl-newsletter-new/img/adhd.png?w=1155" class="card-img-top" alt="ADPhoto" id="ADHD">
+    <img src="/static/images/adhd.png" class="card-img-top" alt="ADPhoto" id="ADHD">
     <div class="card-body">
       <h5 class="card-title">ADHD</h5>
       <p class="card-text">Chat With People Who Also Have ADHD</p>
@@ -92,7 +92,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://www.cedars-sinai.org/content/dam/cedars-sinai/blog/2019/07/common-physical-symptoms-of-hidden-stress.jpg" class="card-img-top" alt="StrPhoto" id="Stress">
+    <img src="/static/images/common-physical-symptoms-of-hidden-stress.jpg" class="card-img-top" alt="StrPhoto" id="Stress">
     <div class="card-body">
       <h5 class="card-title">Stress</h5>
       <p class="card-text">Chat With People Who Also Have Stress</p>
@@ -100,7 +100,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://www.helpguide.org/wp-content/uploads/illustration-man-hearing-many-voices-768.jpg" class="card-img-top" alt="SchPhoto" id="Schizophrenia">
+    <img src="/static/images/illustration-man-hearing-many-voices-768.jpg" class="card-img-top" alt="SchPhoto" id="Schizophrenia">
     <div class="card-body">
       <h5 class="card-title">Schizophrenia</h5>
       <p class="card-text">Chat With People Who Also Have Schizophrenia</p>
