--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -34,7 +34,7 @@
                         <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
                         <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
                          <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/info">About Us</a>
+                  
                     </ul>
                     
                 </li>
@@ -210,7 +210,7 @@
 
     <div id="id01" class="modal">
 
-        <form class="modal-content animate" action="/signed-in" method="post">
+        <form class="modal-content animate" action="/signed-in">
             <div class="imgcontainer">
                 <span onclick="document.getElementById('id01').style.display='none'" class="close"
                     title="Close Modal">&times;</span>
