--- a/templates/chatroom-signedin.html
+++ b/templates/chatroom-signedin.html
@@ -14,7 +14,7 @@
 <body style="background-color: #52B788">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/home">Home</a>
+        <a class="navbar-brand" href="/signed-in">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,8 +26,8 @@
                         Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/log-in">Log
-                        In</a>
+                    <a class="nav-link" href="/home">Log
+                        Out</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
@@ -35,12 +35,12 @@
                         How To Get help
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/gethelp">Get
+                        <li><a class="dropdown-item" href="/gethelp-signedin">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
-                        <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
+                        <li><a class="dropdown-item" href="/talk-signedin">Talk With A Professional</a></li>
+                        <li><a class="dropdown-item" href="/chatroom-signedin">Chat Room</a></li>
                          <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/info">About Us</a>
+                  
                     </ul>
                     
                 </li>
@@ -57,7 +57,7 @@
 
 <div class="card-group" id="Cards">
   <div class="card">
-    <img src="https://uniquemindcare.com/wp-content/uploads/2020/01/cbd-and-anxiety.png" class="card-img-top" alt="AnxPhoto" id="Anxiety">
+    <img src="/static/images/anxiety.png" class="card-img-top" alt="AnxPhoto" id="Anxiety">
     <div class="card-body">
       <h5 class="card-title">Anxiety</h5>
       <p class="card-text">Chat With Other People Who Also Have Anxiety</p>
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://images.emedicinehealth.com/images/article/main_image/bipolar-disorder-1.jpg" class="card-img-top" alt="BiPhoto" id="Bipolar">
+    <img src="/static/images/bipolar-disorder.jpeg" class="card-img-top" alt="BiPhoto" id="Bipolar">
     <div class="card-body">
       <h5 class="card-title">Bipolar Disorder</h5>
       <p class="card-text">Chat With Other People Who Also Have Bipolar Disorder</p>
@@ -73,7 +73,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://www.talkspace.com/blog/wp-content/uploads/2017/09/stigma-depression-woman-illustration_1320WJR-1.png" class="card-img-top" alt="DepPhoto" id="Depression">
+    <img src="/static/images/stigma-depression.png" class="card-img-top" alt="DepPhoto" id="Depression">
     <div class="card-body">
       <h5 class="card-title">Depression</h5>
       <p class="card-text">Chat With Other People Who Also Have Depression</p>
@@ -84,7 +84,7 @@
 
 <div class="card-group" id="Cards">
   <div class="card">
-    <img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/hl-newsletter-new/img/adhd.png?w=1155" class="card-img-top" alt="ADPhoto" id="ADHD">
+    <img src="/static/images/adhd.png" class="card-img-top" alt="ADPhoto" id="ADHD">
     <div class="card-body">
       <h5 class="card-title">ADHD</h5>
       <p class="card-text">Chat With People Who Also Have ADHD</p>
@@ -92,7 +92,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://www.cedars-sinai.org/content/dam/cedars-sinai/blog/2019/07/common-physical-symptoms-of-hidden-stress.jpg" class="card-img-top" alt="StrPhoto" id="Stress">
+    <img src="/static/images/common-physical-symptoms-of-hidden-stress.jpg" class="card-img-top" alt="StrPhoto" id="Stress">
     <div class="card-body">
       <h5 class="card-title">Stress</h5>
       <p class="card-text">Chat With People Who Also Have Stress</p>
@@ -100,7 +100,7 @@
     </div>
   </div>
   <div class="card">
-    <img src="https://www.helpguide.org/wp-content/uploads/illustration-man-hearing-many-voices-768.jpg" class="card-img-top" alt="SchPhoto" id="Schizophrenia">
+    <img src= "/static/images/illustration-man-hearing-many-voices-768.jpg" class="card-img-top" alt="SchPhoto" id="Schizophrenia">
     <div class="card-body">
       <h5 class="card-title">Schizophrenia</h5>
       <p class="card-text">Chat With People Who Also Have Schizophrenia</p>
