--- a/templates/signed-in.html
+++ b/templates/signed-in.html
@@ -14,7 +14,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/home">Home</a>
+        <a class="navbar-brand" href="/signed-in">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,8 +26,8 @@
                         Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/log-in">Log
-                        In</a>
+                    <a class="nav-link" href="/home">Log
+                        Out</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
@@ -35,12 +35,12 @@
                         How To Get help
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/gethelp">Get
+                        <li><a class="dropdown-item" href="/gethelp-signedin">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
-                        <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
+                        <li><a class="dropdown-item" href="/talk-signedin">Talk With A Professional</a></li>
+                        <li><a class="dropdown-item" href="/chatroom-signedin">Chat Room</a></li>
                          <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/info">About Us</a>
+        
                     </ul>
                     
                 </li>
@@ -61,7 +61,7 @@
             <h1>EduMental</h1>
             <p id="SubText">"For Students By Students"</p>
 
-            <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/Logo.png"
+            <img src="static/images/Logo.png"
                 alt="Logo" height="100" width="100" id="Logo" />
 
         </div>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="pic" id="Picture">
-             <img src="https://media.istockphoto.com/photos/hand-shows-the-brain-picture-id1031563502?k=6&m=1031563502&s=612x612&w=0&h=eUM5Fn1c3q9hx_Z_kgzqqctLsAydWf1Oaa0n63wd7Gw="
+             <img src="/static/images/homephoto.jpg"
                     alt="mental health photos" id= "Picture" hieght="600px"width= "600px"/>
                 </div>
 
