--- a/templates/talk-signedin.html
+++ b/templates/talk-signedin.html
@@ -13,7 +13,7 @@
 <body style="background-color: #52B788"></body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/home">Home</a>
+        <a class="navbar-brand" href="/signed-in">Home</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,8 +25,8 @@
                         Up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/log-in">Log
-                        In</a>
+                    <a class="nav-link" href="/home">Log
+                        Out</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button"
@@ -34,12 +34,12 @@
                         How To Get help
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="/gethelp">Get
+                        <li><a class="dropdown-item" href="/gethelp-signedin">Get
                                 Help</a></li>
-                        <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
-                        <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
+                        <li><a class="dropdown-item" href="/talk-signedin">Talk With A Professional</a></li>
+                        <li><a class="dropdown-item" href="/chatroom-signedin">Chat Room</a></li>
                          <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/info">About Us</a>
+                 
                     </ul>
                     
                 </li>
