--- a/templates/info.html
+++ b/templates/info.html
@@ -102,10 +102,10 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="/static/images/unnamed%20%281%29.jpg"
+                    <img src="/static/images/matthew.jpg"
                         class="card-img-top" alt="MatthewV" id="MatthewPicture">
                     <div class="card-body">
-                        <p id="FounderText">Hello! My name is Matthew Vareka and I am one of the coders who made this website. The reason I am invested in this start-up is because I want students who go through to hard times to know that they are not alone and have other people to talk to. Contact me at mattvarela06@gmail.com</p>
+                        <p id="FounderText">Hello! My name is Matthew Varela and I am one of the coders who made this website. The reason I am invested in this start-up is because I want students who go through to hard times to know that they are not alone and have other people to talk to. Contact me at mattvarela06@gmail.com</p>
                     </div>
                 </div>
                 <div class="card">
