--- a/templates/chat-ad-signedin.html
+++ b/templates/chat-ad-signedin.html
@@ -56,7 +56,7 @@
 </nav>
 <h1 id="ADHDTitle">ADHD Chat</h1>
 <div id="chat">
-    <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/chat.png"
+    <img src="/static/images/chat.png"
         alt="Chat" width="1000" height="600" />
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
