--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -214,7 +214,7 @@
             <div class="imgcontainer">
                 <span onclick="document.getElementById('id01').style.display='none'" class="close"
                     title="Close Modal">&times;</span>
-                <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/Logo.png"
+                <img src="/static/images/Logo.png"
                     alt="Avatar" class="avatar">
             </div>
 
