--- a/templates/info.html
+++ b/templates/info.html
@@ -69,18 +69,17 @@
             <p id="Text1">
                 Depression in teens
                 has also been proven to be a crucial factor in a student's academic
-                performance and concentration. Additionally, in New York there are six
-                deaths per every 100,000 people in the same age group of 15-19 caused by
-                self harm. Even though this is not as many teens
-                dying as there are in the US as a whole, every life matters. A few causes
-                of the recent increase in these numbers are lack of knowledge on teen mental
-                health and difficulty to access professional help. Around 45% of all people
-                in the US consider themselves to know about mental health, this means there
-                are plenty of others who still have more to learn. There are available
-                resources to inform oneself on mental health issues as well as resources in
-                school for students. However, these resources may not be able to help as
-                much as listening to a professional or someone else's firsthand experience
-                would be able to.
+                performance and concentration. Additionally, in New York, six out of
+                every 100,000 15-19 year olds die due to self harm. Even though this is 
+                not as many teens dying as there are in the US as a whole, every life 
+                matters. A few causes of the recent increase in these numbers are lack 
+                of knowledge on teen mental health and difficulty to access professional 
+                help. Around 45% of all people in the US consider themselves to know about 
+                mental health, this means there are plenty of others who still have more 
+                to learn. There are available resources to inform oneself on mental health 
+                issues as well as resources in school for students. However, these resources 
+                may not be able to help as much as listening to a professional or someone 
+                else's firsthand experience would be able to.
             </p>
             <h2>Our Solution</h2>
             <p id="Text">
