--- a/templates/gethelp-signedin.html
+++ b/templates/gethelp-signedin.html
@@ -53,6 +53,10 @@
     </div>
 </nav>
 <h1 id="GetHelpTitle">Get Help here!</h1>
+<p id="Text2">If you, or anyone else that you know has been severely struggling with their mental health, please refer them here.
+USA National Suicide Prevention Hotline:
+800-273-8255
+If anyone is in need of help please encourage them to talk to a professional about how they are feeling or call the national suicide prevention hotline for their country.</p>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
