--- a/templates/gethelp.html
+++ b/templates/gethelp.html
@@ -7,9 +7,11 @@
 
 </head>
 <link rel="stylesheet" href="/static/css/style.css" />
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </html>
+
 <body style="background-color: #52B788"></body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
@@ -38,12 +40,13 @@
                                 Help</a></li>
                         <li><a class="dropdown-item" href="/talk">Talk With A Professional</a></li>
                         <li><a class="dropdown-item" href="/chatroom">Chat Room</a></li>
-                         <li class="nav-item">
-                   
+                        <li class="nav-item">
+
                     </ul>
-                    
+
                 </li>
-                <li class= "nav-item dropdown"> <a class="nav-link active" aria-current="page" href="/info">About Us</a></li>
+                <li class="nav-item dropdown"> <a class="nav-link active" aria-current="page" href="/info">About Us</a>
+                </li>
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -53,7 +56,16 @@
     </div>
 </nav>
 <h1 id="GetHelpTitle">Get Help here!</h1>
+<div id= "GetHelpText">
+    <p>If you, or anyone else that you know has been severely struggling with their mental health, please refer them
+        here. If anyone is in need of help please encourage them to talk to a professional about how they are feeling or call
+        the national suicide prevention hotline for their country. 
+        USA National Suicide Prevention Hotline: 800-273-8255
+        Eating Disorder Hotline: 800-931-2237
+        Self-Harm Hotline: 877-455-0628
+        Depression Hotline: 888-640-5174
+    </p>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
