--- a/static/css/style.css
+++ b/static/css/style.css
@@ -356,7 +356,8 @@ div {
     text-align: center;
     font-size: medium;
   }
-  #Text2{
-    color: white;
-    font-size: large;
-  }
+  
+ #Text2{
+     color:white;
+     font-size:large
+ }
