--- a/templates/talk.html
+++ b/templates/talk.html
@@ -54,7 +54,7 @@
     </div>
 </nav>
 <h1 id="TalkTitle">Talk With A Professional</h1>
-<p id= "SubText">Talk With a Professional:
+<p style="color: white">Talk With a Professional:
 If you or anyone you know needs professional help please contact one of the chat's Therapists. They are professionals accredited by the ACOTE or the CACREP.
 If you would need help contact us at EduMental1@gmail.com and we will give you the contact information for the therapists.</p>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
