--- a/templates/gethelp-signedin.html
+++ b/templates/gethelp-signedin.html
@@ -54,15 +54,15 @@
     </div>
 </nav>
 <h1 id="GetHelpTitle">Get Help here!</h1>
-<p style="color: white">
+<p style="color: white; font-size: large">
     If you, or anyone else that you know has been severely struggling with their mental health, please refer them
         here. If anyone is in need of help please encourage them to talk to a professional about how they are feeling or call
         the national suicide prevention hotline for their country:
 </p>
-<p style="color: white">USA National Suicide Prevention Hotline: 800-273-8255</p>
-<p style="color: white">Eating Disorder Hotline: 800-931-2237</p>
-<p style="color: white">Self-Harm Hotline: 877-455-0628</p>
-<p style="color: white">Depression Hotline: 888-640-5174</p>
+<p style="color: white; font-size: large">USA National Suicide Prevention Hotline: 800-273-8255</p> -->
+<p style="color: white; font-size: large">Eating Disorder Hotline: 800-931-2237</p>
+<p style="color: white; font-size: large">Self-Harm Hotline: 877-455-0628</p>
+<p style="color: white; font-size: large">Depression Hotline: 888-640-5174</p>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
